Rename api key variable and main activity file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
     buildTypes.each {
-        it.buildConfigField 'String', 'THE_MOVIE_DB_API_KEY', MovieApiKey
+        it.buildConfigField 'String', 'THE_MOVIE_DB_API_KEY', MyTheMovieApiKey
     }
 }
 
