--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.example.aliciamaclennan.popflicks.SpinnerActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name=".MovieFragment"
             android:label="@string/settings_title">
             <meta-data
