--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,7 @@
         </activity>
         <activity
             android:name=".MovieFragment"
-            android:label="@string/settings_title">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.aliciamaclennan.popflicks.MovieActivity"/>
+            android:label="@string/app_name">
         </activity>
     </application>
 
