--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.aliciamaclennan.popflicks.SpinnerActivity"
-            android:label="@string/app_name" >
+            android:name=".MovieFragment"
+            android:label="@string/app_name">
         </activity>
         <activity
-            android:name=".MovieFragment"
+            android:name=".MovieDetail"
             android:label="@string/app_name">
         </activity>
     </application>
