Rename class to search activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".MovieDetail"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".SearchActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
